test/modules/deitz/test_module_access1.good
test_module_access1.chpl:10: error: Symbol 'x' undeclared in module 'M'
