test/modules/deitz/test_module_access1.chpl
module OuterModule {
  var x = 1;

  module M {
    var y = 2;
  }

  use M;

  writeln((M.x, M.y));
}
